fixed scrollBar

--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,20 @@
     width: 100vw;
     background-color: white;
 }
+
+::-webkit-scrollbar{
+    width: 10px;
+    
+   
+}
+::-webkit-scrollbar-track{
+    
+    border-radius: 5px;
+    background-color: #D9D9D9;
+}
+
+::-webkit-scrollbar-thumb{
+    width: 8px;
+background-color: white;
+border-radius: 5px;
+}
