--- a/src/groupList/groupList.css
+++ b/src/groupList/groupList.css
@@ -1,4 +1,5 @@
 .groupMain-div{
+    position: relative;
     width: 30vw;
     height: 100vh;
     display: flex;
@@ -21,13 +22,16 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
+    scroll-snap-type:y proximity;
 }
 .group-div{
+    scroll-snap-align: start;
     cursor: pointer;
     display: flex;
     align-items: center;
     padding: 4px;
     margin-bottom:4px ;
+
     border-radius: 16px;
 }
 
@@ -50,10 +54,13 @@
     
 }
 .btn-div{
+    position: absolute;
     cursor: pointer;
     text-align: center;
     padding: 8px;
     display: flex;
+    bottom:5%;
+    left: 70%;
     align-items: center;
     justify-content: center;
     height: 40px;
